# narrator

./: .coveragerc  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  docker-compose.yaml  main.py  mypy.ini  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
app/: main.py
contracts/: README.md  buf.gen.yaml  buf.yaml  pyproject.toml
contracts/.github/workflows/: build.yml
contracts/contracts_py/: __init__.py  common_pb2.py  common_pb2.pyi  template_service_pb2.py
contracts/proto/example/v1/: hello.proto
docs/: README.md  agent_quick_start.md  augment_context_tz.md  augment_object_slot_issue.md  augmentation_pipeline_brainstorm.md  character_relation_augment_issue.md  codex_dev_environment.md  combined.py  cypher_template_and_fact.md  cypher_template_spec_v2.md  extract_graph_schema.md  extract_save_algorithm.md  fact_examples.md  graph_models_review.md  graph_proxy.md  legacy_fact_docs_overview.md  llm_cot_review.md  models_refactoring_pipeline.md  pipeline_implementation.md  pipeline_overview.md  prompts_index.md  pydantic_models_for_cypher_template.md  raptor_pipeline_architecture.md  redesign_backlog_analysis.md  service-template.py  service_structure.md  slotfiller_spec.md  specification.md  template_structure_and_domain_example.md  test_cases_extract_save.md  алгоритм_работы_эндпойнта_v_1_extract_save.md  модели_для_построения_графа.md
proto/: README.md  common.proto  template_service.proto
template_service/: .flake8  .pre-commit-config.yaml  Dockerfile  README.md  mypy.ini  pytest.ini  (+2 more)
(+215 files in other folders)
