[tool.poetry]
name = "narrator"
version = "0.1.0"
description = "StoryGraph orchestrator"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
uvicorn = "*"
pydantic = "*"
pydantic-settings = ">=2.0.3"
fastapi_camelcase = "*"
debugpy = "*"
asyncpg = "*"
httpx = "*"
greenlet = "*"
langchain = "*"
langchain-openai = "*"
weaviate-client = "*"
jinja2 = "*"
neo4j = "*"
langfuse = "*"
numpy = "*"
grpcio = "*"
grpcio-tools = "*"
contracts = { path = "./contracts", develop = true }

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
black = "*"
flake8 = "*"
mypy = "*"
pytest = "*"
pytest-asyncio = ">=1.0.0"
pytest-cov = "*"
vulture = "==2.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
